--- a/public/DASHBOARD.html
+++ b/public/DASHBOARD.html
@@ -658,13 +658,13 @@ const coachingDebriefSection = document.getElementById('coachingDebriefSection')
   // Coaching Debrief DOM
 const debriefStudentSelect   = document.getElementById('debriefStudentSelect');
 const debriefDateInput       = document.getElementById('debriefDateInput');
-const debriefGoals           = document.getElementById('debriefGoals');
-const debriefTopics          = document.getElementById('debriefTopics');
-const debriefGrammar         = document.getElementById('debriefGrammar');
-const debriefVocabulary      = document.getElementById('debriefVocabulary');
-const debriefPronunciation   = document.getElementById('debriefPronunciation');
-const debriefOther           = document.getElementById('debriefOther');
-const debriefHomework        = document.getElementById('debriefHomework');
+const debriefGoals           = document.getElementById('debrief_goals');
+const debriefTopics          = document.getElementById('debrief_topics');
+const debriefGrammar         = document.getElementById('debrief_grammar');
+const debriefVocabulary      = document.getElementById('debrief_vocabulary');
+const debriefPronunciation   = document.getElementById('debrief_pronunciation');
+const debriefOther           = document.getElementById('debrief_other');
+const debriefHomework        = document.getElementById('debrief_homework');
 const debriefSaveDraftBtn    = document.getElementById('debriefSaveDraftBtn');
 const debriefSendBtn         = document.getElementById('debriefSendBtn');
 const debriefMsg             = document.getElementById('debriefMsg');
