--- a/public/DASHBOARD.html
+++ b/public/DASHBOARD.html
@@ -1060,6 +1060,66 @@ localStorage.setItem("coachSession", JSON.stringify({
   }
 });
 
+// crea bottone e container drafts (una sola volta, persistenti)
+const labelEl = document.querySelector('label[for="debriefStudentSelect"]');
+if (labelEl && !document.getElementById('debriefLoadDraftsBtn')) {
+  const btn = document.createElement('button');
+  btn.id = 'debriefLoadDraftsBtn';
+  btn.textContent = '📂 Load Drafts';
+  btn.className = 'ml-2 px-3 py-1 rounded bg-blue-600 text-white text-sm hover:bg-blue-700';
+  labelEl.after(btn);
+
+  const container = document.createElement('div');
+  container.id = 'debriefDraftsContainer';
+  container.className = 'hidden mt-4';
+  coachingDebriefSection.insertBefore(container, document.getElementById('debriefFieldsContainer'));
+
+  btn.addEventListener('click', async () => {
+    const studentId = debriefStudentSelect.value;
+    if (!studentId) {
+      showToast('Select a student first', 3000, 'bg-red-600');
+      return;
+    }
+    container.innerHTML = loaderHTML("Loading drafts...");
+    container.classList.remove('hidden');
+    try {
+      const resp = await apiGet('getDebriefDrafts', { coachId: CURRENT_COACH_ID, studentId });
+      if (!resp.success || !resp.drafts?.length) {
+        container.innerHTML = '<p class="text-gray-500 text-sm">No drafts found.</p>';
+        return;
+      }
+      let html = `
+        <table class="min-w-full border border-gray-200 rounded-xl text-sm mt-2">
+          <thead class="bg-gray-100">
+            <tr>
+              <th class="px-3 py-2 border">Date</th>
+              <th class="px-3 py-2 border">Goals</th>
+              <th class="px-3 py-2 border">Topics</th>
+              <th class="px-3 py-2 border">Load</th>
+            </tr>
+          </thead>
+          <tbody>`;
+      resp.drafts.forEach(d => {
+        html += `
+          <tr class="border-b hover:bg-gray-50">
+            <td class="px-3 py-2">${d.dateISO || '-'}</td>
+            <td class="px-3 py-2">${(d.goals || '').slice(0, 50)}</td>
+            <td class="px-3 py-2">${(d.topics || '').slice(0, 50)}</td>
+            <td class="px-3 py-2 text-center">
+              <button class="px-2 py-1 bg-green-600 text-white rounded text-xs loadDraftBtn"
+                      data-row="${d.rowNumber}">Load</button>
+            </td>
+          </tr>`;
+      });
+      html += `</tbody></table>`;
+      container.innerHTML = html;
+    } catch (err) {
+      container.innerHTML = `<p class="text-red-500 text-sm">Error: ${err.message}</p>`;
+    }
+  });
+}
+
+  
 viewCoachingDebriefBtn.addEventListener('click', async () => {
 
     // Container per tabella bozze + bottone load
